@@ -14,11 +14,12 @@ public class ConvertListStreamTest {
     @Test
     public void when2ListArray() {
         ConvertListStream convert = new ConvertListStream();
-        List<int[]> list = new ArrayList<>();
-        list.add(new int[]{1, 2});
-        list.add(new int[]{3, 4, 5, 6});
+        List<int[]> list = List.of(
+                new int[]{1, 2},
+                new int[]{3, 4, 5, 6}
+        );
         List<Integer> result = convert.convert(list);
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = List.of(
                 1, 2, 3, 4, 5, 6
         );
         assertThat(result, is(expect));
@@ -27,12 +28,13 @@ public class ConvertListStreamTest {
     @Test
     public void when3ListArray() {
         ConvertListStream convert = new ConvertListStream();
-        List<int[]> list = new ArrayList<>();
-        list.add(new int[]{1, 2});
-        list.add(new int[]{3, 4, 5, 6});
-        list.add(new int[]{7, 8, 9});
+        List<int[]> list = List.of(
+                new int[]{1, 2},
+                new int[]{3, 4, 5, 6},
+                new int[]{7, 8, 9}
+        );
         List<Integer> result = convert.convert(list);
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = List.of(
                 1, 2, 3, 4, 5, 6, 7, 8, 9
         );
         assertThat(result, is(expect));
