@@ -22,7 +22,7 @@ public class ConvertMatrix2ListTest {
                 {1, 2},
                 {3, 4}
         };
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = List.of(
                 1, 2, 3, 4
         );
         List<Integer> result = list.toList(input);
@@ -36,7 +36,7 @@ public class ConvertMatrix2ListTest {
                 {1, 2, 3},
                 {4, 5, 6}
         };
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = List.of(
                 1, 2, 3, 4, 5, 6
         );
         List<Integer> result = list.toList(input);
@@ -51,7 +51,7 @@ public class ConvertMatrix2ListTest {
                 {4, 5, 6},
                 {7, 8, 9}
         };
-        List<Integer> expect = Arrays.asList(
+        List<Integer> expect = List.of(
                 1, 2, 3, 4, 5, 6, 7, 8, 9
         );
         List<Integer> result = list.toList(input);
